--- a/ambar-inside.html
+++ b/ambar-inside.html
@@ -1,12 +1,12 @@
 <html>
 
 <head>
-    <title>Амбар</title>
+    <title>Амбар  внутри</title>
 </head>
 
 <body>
     <map name="ambar-inside">
-        <area shape="rect" coords="120,470,200,570" href="ambar-inside.html" alt="Амбар" title="Амбар"/>
+        <area alt="Выход" title="Выход" href="ambar.html" coords="777,22,18" shape="circle">
     </map>
     <img src="Usadba/ambar_inside.jpg" usemap="#ambar-inside" border="0" />
 </body>
