--- a/ambar.html
+++ b/ambar.html
@@ -6,7 +6,8 @@
 
 <body>
     <map name="ambar">
-        <area shape="rect" coords="120,470,200,570" href="ambar-inside.html" alt="Амбар" title="Амбар"/>
+        <area shape="rect" coords="334,357,408,466" href="ambar-inside.html" alt="Амбар" title="Амбар"/>
+        <area alt="Выход" title="Карта" href="map.html" coords="780,18,13" shape="circle">
     </map>
     <img src="Usadba/ambar.jpg" usemap="#ambar" border="0" />
 </body>
