--- a/bania.html
+++ b/bania.html
@@ -1,16 +1,15 @@
 <html>
 
 <head>
-    <title>Карта ссылок </title>
+    <title>Баня</title>
 </head>
 
 <body>
-    <map name="map">
-        <area shape="rect" coords="120,470,200,570" href="ambar.html" alt="Амбар" title="Амбар"/>
-        <area shape="circle" coords="465,97,25" href="Usadba/bania.jpg" alt="Баня" title="Баня"/>
-        <area shape="poly" coords="400,245,350,390,420,400,470,255,400,245" href="Usadba/dvor.jpg" alt="Двор" title="Двор"/>
+    <map name="bania">
+        <area alt="Баня" title="Баня" href="bania-inside.html" coords="357,397,391,515" shape="rect">
+        <area alt="Карта" title="Карта" href="map.html" coords="778,19,14" shape="circle">
     </map>
-    <img src="Usadba/plan.jpg" usemap="#map" border="0" />
+    <img src="Usadba/bania.jpg" usemap="#bania" border="0" />
 </body>
 
 </html>
