--- a/map.html
+++ b/map.html
@@ -6,11 +6,10 @@
 
 <body>
     <map name="map">
-        <area shape="rect" coords="120,470,200,570" href="ambar.html" alt="Амбар" title="Амбар"/>
-        <area shape="circle" coords="465,97,25" href="Usadba/bania.jpg" alt="Баня" title="Баня"/>
-        <area shape="poly" coords="400,245,350,390,420,400,470,255,400,245" href="Usadba/dvor.jpg" alt="Двор" title="Двор"/>
+        <area shape="rect" coords="120,470,200,570" href="ambar.html" alt="Амбар" title="Амбар" />
+        <area shape="circle" coords="465,97,25" href="bania.html" alt="Баня" title="Баня" />
+        <area shape="poly" coords="352,235,358,229,468,253,426,405,350,391,394,270" href="dvor.html" alt="Двор"
+            title="Двор" />
     </map>
     <img src="Usadba/plan.jpg" usemap="#map" border="0" />
 </body>
-
-</html>
