Fixing bug with back in bania-inside.html

--- a/bania-inside.html
+++ b/bania-inside.html
@@ -5,10 +5,10 @@
 </head>
 
 <body>
-    <map name="ambar-inside">
-        <area alt="Выход" title="Выход" href="ambar.html" coords="777,22,18" shape="circle">
+    <map name="bania-inside">
+        <area alt="Выход" title="Выход" href="bania.html" coords="777,22,18" shape="circle">
     </map>
-    <img src="Usadba/bania2.jpg" usemap="#ambar-inside" border="0" />
+    <img src="Usadba/bania2.jpg" usemap="#bania-inside" border="0" />
 </body>
 
 </html>
