Fixing area of the bania-inside.html

--- a/bania-inside.html
+++ b/bania-inside.html
@@ -6,7 +6,7 @@
 
 <body>
     <map name="bania-inside">
-        <area alt="Выход" title="Выход" href="bania.html" coords="777,22,18" shape="circle">
+        <area alt="Выход" title="Выход" href="bania.html" coords="456,124,461,344,581,340,579,118" shape="poly">
     </map>
     <img src="Usadba/bania2.jpg" usemap="#bania-inside" border="0" />
 </body>
